# trimat

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml  release.yml
benches/: gemm_bench.rs  gemv_bench.rs
docs/superpowers/plans/: 2026-06-09-trimat-p0.md
scripts/: diagnose_bug.py  diagnose_layer.py  generate_demo.py  validate_real_bitnet.py
src/: dispatch.rs  lib.rs  pack.rs  quantize.rs  tensor.rs
src/kernels/: avx2.rs  mod.rs  neon.rs  scalar.rs
tests/: conftest.py  test_gemm.py  test_gemv.py  test_integration.py  test_loader.py  test_nn.py  test_pack.py  test_qgemm.py  test_qgemv.py
trimat/: __init__.py  _trimat.pyi  errors.py  loader.py  nn.py
