[package]
name    = "trimat"
version = "0.1.0"
edition = "2021"

[lib]
name       = "_trimat"
crate-type = ["cdylib"]

[dependencies]
pyo3    = { version = "0.28", features = ["extension-module"] }
numpy   = "0.28"
ndarray = "0.17"
rayon   = "1.10"

[dev-dependencies]
proptest = "1.5"

[profile.release]
lto       = true
opt-level = 3
