[package]
name        = "trimat"
version     = "0.1.0"
edition     = "2021"
description  = "Ternary matrix multiplication — Rust+SIMD GEMV/GEMM for BitNet-family models"
license     = "MIT"
repository  = "https://github.com/hyde0395/trimat"
homepage    = "https://github.com/hyde0395/trimat"
readme      = "README.md"
keywords    = ["bitnet", "ternary", "simd", "llm", "quantization"]
categories  = ["science", "mathematics"]

[lib]
name       = "_trimat"
crate-type = ["cdylib", "rlib"]

[features]
# maturin adds this feature automatically via pyproject.toml.
# Do NOT enable it here; cargo test/bench need to link Python directly.
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3    = { version = "0.28", features = ["abi3-py39"] }
numpy   = "0.28"
ndarray = "0.17"
rayon   = "1.10"

[dev-dependencies]
proptest  = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "gemv_bench"
harness = false

[[bench]]
name    = "gemm_bench"
harness = false

[profile.release]
lto       = true
opt-level = 3
