[build-system]
requires      = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name            = "trimat"
version         = "0.1.0"
description     = "Ternary matrix multiplication — Rust+SIMD, pip one-liner"
readme          = "README.md"
requires-python = ">=3.9"
license         = { file = "LICENSE" }
authors         = [{ name = "hyde0395" }]
keywords        = ["bitnet", "ternary", "simd", "neon", "avx2", "llm", "quantization", "gemv", "rust"]
classifiers     = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies    = ["numpy>=1.24"]

[project.urls]
Homepage   = "https://github.com/hyde0395/trimat"
Repository = "https://github.com/hyde0395/trimat"
Issues     = "https://github.com/hyde0395/trimat/issues"

[tool.maturin]
features      = ["pyo3/extension-module"]
module-name   = "trimat._trimat"
python-source = "."
